--- a/config.toml
+++ b/config.toml
@@ -273,28 +273,27 @@ enableGitInfo = false
   #   icon_pack = "fab"
   #   link = "https://twitter.com/GeorgeCushen"
 
-  # TODO: get google scholar
-  # [[params.social]]
-  #   icon = "google-scholar"
-  #   icon_pack = "ai"
-  #   link = "https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ"
+  [[params.social]]
+    icon = "google-scholar"
+    icon_pack = "ai"
+    link = "https://scholar.google.com/citations?user=TIbJx30AAAAJ&hl=en&oi=sra"
 
   [[params.social]]
     icon = "github"
     icon_pack = "fab"
     link = "https://github.com/firstmover"
 
-  [[params.social]]
-    icon = "cv"
-    icon_pack = "ai"
-    link = "https://firstmover.github.io/pdf/cv.pdf"
-
-  # Link to a PDF of your resume/CV from the About widget.
-  # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
   # [[params.social]]
   #   icon = "cv"
   #   icon_pack = "ai"
-  #   link = "files/cv.pdf"
+  #   link = "https://firstmover.github.io/pdf/cv.pdf"
+
+  # Link to a PDF of your resume/CV from the About widget.
+  # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
+  [[params.social]]
+    icon = "cv"
+    icon_pack = "ai"
+    link = "files/cv.pdf"
 
 # Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
@@ -336,10 +335,10 @@ enableGitInfo = false
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[menu.main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 7
+[[menu.main]]
+   name = "CV"
+   url = "files/cv.pdf"
+   weight = 7
 
 # Search.
 [params.search]
