--- a/config.toml
+++ b/config.toml
@@ -60,7 +60,7 @@ enableGitInfo = false
   organizations = [ { name = "Peking University", url = "" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
-  avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
+  avatar = "portrait.png"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
 
   # Details for the Contact Widget
   email = "yingchengliu AT pku DOT edu DOT cn / liuyc AT mit DOT edu"
